drag n drop update, multiboard and more stuff

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 
 
 # Logs
-frontend
+frontend/my-svelte-app/.vscode
+frontend/my-svelte-app/dist
+frontend/my-svelte-app/node_modules
+frontend/my-svelte-app/yarn.lock
 
 
 
