--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,14 @@
     "vite": "^5.1.4"
   },
   "dependencies": {
-    "@milkdown/core": "^7.3.5",
-    "@milkdown/ctx": "^7.3.5",
-    "@milkdown/plugin-listener": "^7.3.5",
-    "@milkdown/preset-commonmark": "^7.3.5",
-    "@milkdown/prose": "^7.3.5",
-    "@milkdown/transformer": "^7.3.5",
+    "@milkdown/core": "^7.5.0",
+    "@milkdown/crepe": "^7.5.7",
+    "@milkdown/ctx": "^7.5.0",
+    "@milkdown/kit": "^7.5.5",
+    "@milkdown/plugin-listener": "^7.5.0",
+    "@milkdown/preset-commonmark": "^7.5.0",
+    "@milkdown/prose": "^7.5.0",
+    "@milkdown/transformer": "^7.5.0",
     "calendar-base": "^2.0.1",
     "pocketbase": "^0.21.1",
     "sortablejs": "^1.15.2",
