--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@milkdown/preset-commonmark": "^7.5.0",
     "@milkdown/prose": "^7.5.0",
     "calendar-base": "^2.0.1",
+    "picmo": "^5.8.5",
     "pocketbase": "^0.21.5",
     "sortablejs": "^1.15.3",
     "svelte-body": "^1.4.0",
