--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,16 +14,19 @@
     "vite": "^5.1.4"
   },
   "dependencies": {
-    "@milkdown/core": "^7.5.0",
-    "@milkdown/ctx": "^7.5.0",
-    "@milkdown/kit": "^7.5.5",
-    "@milkdown/plugin-listener": "^7.5.0",
-    "@milkdown/preset-commonmark": "^7.5.0",
-    "@milkdown/prose": "^7.5.0",
+    "@milkdown/core": "7.5.0",
+    "@milkdown/ctx": "7.5.0",
+    "@milkdown/kit": "7.5.5",
+    "@milkdown/plugin-listener": "7.5.0",
+    "@milkdown/preset-commonmark": "7.5.0",
+    "@milkdown/prose": "7.5.0",
+    "@milkdown/transformer": "7.5.0",
+    "@milkdown/utils": "7.5.0",
     "calendar-base": "^2.0.1",
     "picmo": "^5.8.5",
     "pocketbase": "^0.21.5",
-    "sortablejs": "^1.15.3",
+    "prosemirror-schema-basic": "^1.2.4",
+    "sortablejs": "^1.15.6",
     "svelte-body": "^1.4.0",
     "svelte-spa-router": "^4.0.1"
   }
