--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@tiptap/extension-list": "^3.6.2",
     "@tiptap/extension-text-style": "^3.6.2",
     "@tiptap/starter-kit": "^3.6.2",
+    "@tiptap/suggestion": "^3.6.5",
     "calendar-base": "^2.0.1",
     "picmo": "^5.8.5",
     "pocketbase": "^0.21.5",
