--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@tiptap/core": "^3.6.2",
     "@tiptap/extension-image": "^3.6.2",
     "@tiptap/extension-list": "^3.6.2",
+    "@tiptap/extension-mention": "^3.6.5",
     "@tiptap/extension-text-style": "^3.6.2",
     "@tiptap/starter-kit": "^3.6.2",
     "@tiptap/suggestion": "^3.6.5",
